--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
   "devDependencies": {
     "@types/node": "^22.7.5",
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "@spotify/web-api-ts-sdk": "^1.2.0",
+    "axios": "^1.7.7",
+    "dotenv": "^16.4.5"
   }
 }
