--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "d3": "^7.9.0",
     "d3-force": "^3.0.0",
     "lodash": "^4.17.21",
+    "p-limit": "^6.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
