--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "cli": "npx ts-node index.ts",
+    "spotify": "npx ts-node Spotify.ts",
     "start": "npx ts-node server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,8 +19,10 @@
   },
   "dependencies": {
     "@spotify/web-api-ts-sdk": "^1.2.0",
+    "@types/lodash": "^4.17.12",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "lodash": "^4.17.21"
   }
 }
