--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.3.1",
     "d3": "^7.9.0",
     "d3-force": "^3.0.0",
+    "dexie": "^4.0.9",
     "lodash": "^4.17.21",
     "p-limit": "^6.1.0",
     "react": "^18.3.1",
